2011-08-23  Dimitri Glazkov  <dglazkov@chromium.org>

        Make notifications appear in time order again.
        https://bugs.webkit.org/show_bug.cgi?id=66815

        Reviewed by Adam Barth.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/ui/notifications.js: Added setting index of the notification.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/ui/notifications_unittests.js: Updated the test.

2011-08-23  James Robinson  <jamesr@chromium.org>

        [chromium] Need a way to test lost compositor context recovery
        https://bugs.webkit.org/show_bug.cgi?id=66820

        Reviewed by Kenneth Russell.

        Exposes a LayoutTestController interface in chromium to simulate a
        lost compositor context.

        * DumpRenderTree/chromium/LayoutTestController.cpp:
        (LayoutTestController::LayoutTestController):
        (LayoutTestController::loseCompositorContext):
        * DumpRenderTree/chromium/LayoutTestController.h:

2011-08-23  Dimitri Glazkov  <dglazkov@chromium.org>

        Change garden-o-matic frontend builder array to be a configuration map.
        https://bugs.webkit.org/show_bug.cgi?id=66816

        Reviewed by Adam Barth.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/builders.js: Made kBuilders a map, with value being a configuration object.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/config.js: Adjusted callsites to expect a map.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/main.js: Ditto.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/model.js: Ditto.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/ui.js: Ditto.

2011-08-23  Cary Clark  <caryclark@google.com>

        Turn WebCanvas into CGContext before drawing scrollbar (DRT using Skia on Mac)